--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ body{
     display: none;
     justify-content: center;
     align-items: center;
-    font-size: 30vh;
-    width: 100vw;
-    height: 100vh;
+    font-size: 100px;
+    width: 100%;
+    height: 100%;
 }
 #pobedatext{
     display: block;
