--- a/style.css
+++ b/style.css
@@ -68,22 +68,32 @@ body{
     border-left: 1px solid black;
 }
 #pobeda{
-    position: absolute;
-    z-index: 3;
-    background-color: rgba(0, 0,0, 0.9);
-    color: white;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
-    width: 100%;
-    height: 100%;
+position: absolute;
+top:0px;
+left: 0px;
+z-index: 3;
+width: 100%;
+height: 100%;
+background-color:black;
+opacity: .9;
+color:white;
+display: none;
 }
 #pobedatext{
-    display: block;
+    z-index: 4;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    background-color:black;
+    font-size: 100px;
 }
 #pobeda button{
-    display: block;
-    font-size: 40px;
-    margin-left: 20px;
+    width: 300px;
+    font-size:30px;
+    height: 40px;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
 }
